// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AIContainer snapshot testing Store contains some cards 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-1"
    />
    <div
      className="col-10"
    >
      <div
        className="container mt-1"
      >
        <div
          className="row justify-content-center"
        >
          <div
            className="col-1 ml-3 card mb-1 shirt"
          />
          <div
            className="col-1 ml-3 card mb-1 shirt"
          />
          <div
            className="col-1 ml-3 card mb-1 shirt"
          />
          <div
            className="col-1 ml-3 card mb-1 shirt"
          />
          <div
            className="col-1 ml-3 card mb-1 shirt"
          />
          <div
            className="col-1 ml-3 card mb-1 shirt"
          />
          <div
            className="col-1 align-self-center"
          />
        </div>
      </div>
    </div>
    <div
      className="col-1"
    />
  </div>
</div>
`;

exports[`AIContainer snapshot testing Store does not contain any card 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-1"
    />
    <div
      className="col-10"
    >
      <div
        className="container invisible"
      >
        <div
          className="row"
        >
          <div
            className="col-1 card mb-1 shirt"
          />
        </div>
      </div>
    </div>
    <div
      className="col-1"
    />
  </div>
</div>
`;
